fix color bleed

--- a/AO.desktop.css
+++ b/AO.desktop.css
@@ -135,7 +135,7 @@ body {
     transform: translateX(-1px);
     animation: none;
     display: flex;
-    filter: brightness(1000%);
+    filter: brightness(10000%);
     transition: filter 0.3s ease;
 }
 .social-icon-header img:hover {
@@ -219,7 +219,7 @@ body {
     width: 100%;
     height: auto;
     max-width: 50px;
-    filter: brightness(1000%);
+    filter: brightness(10000%);
     transition: filter 0.3s ease;
 
 }
